--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,10 @@ body {
   padding: 20px 10px;
 }
 
+.Item-title-clicked {
+  padding-left: 5px;
+}
+
 .Item-actions {
   display: flex;
   justify-content: flex-end;
