--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -1,6 +1,6 @@
 .Item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   transition: background-color 1s;
   padding-left: 10px
 }
